# krcg-api

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  CHANGES.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  justfile  pyproject.toml  setup.cfg  test.http
.github/workflows/: deploy.yml  publish.yml  static.yml  validation.yml
deploy/: README.md  cleanup.yml  deploy.yml  service.yml
deploy/ci/: README.md  validation.yml
deploy/templates/: krcg_api.service.j2
krcg_api/: __init__.py  api.py  config.py  models.py  wsgi.py
krcg_api/templates/: openapi.yaml
tests/: conftest.py  test_amaranth.py  test_api.py  test_candidates.py  test_card.py  test_card_search.py  test_complete.py  test_convert.py  test_docs.py  test_docs_examples.py  test_submit_ruling.py  test_swagger.py  test_twda.py  test_vdb.py  test_vtesdecks.py
