[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krcg-api"
version = "3.3"
license = "MIT"
authors = [
    { name = "Lionel Panhaleux", email = "lionel.panhaleux+krcg@gmail.com" },
]
description = "Web API for VTES cards and TWDA"
keywords = [
    "vtes",
    "Vampire: The Eternal Struggle",
    "CCG",
    "TWD",
    "TWDA",
    "api",
    "web",
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]
dependencies = ["arrow", "babel", "flask", "krcg>=4.16", "requests"]

[dependency-groups]
dev = [
    "coverage",
    "ipython",
    "mypy",
    "openapi-spec-validator",
    "pytest",
    "ruff",
    "types-requests",
]

[project.scripts]
run-krcg-api = "krcg_api:main"

[project.urls]
Homepage = "https://api.krcg.org"
Repository = "https://github.com/lionel-panhaleux/krcg-api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
