[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krcg-api"
version = "3.4"
license = "MIT"
authors = [
    { name = "Lionel Panhaleux", email = "lionel.panhaleux+krcg@gmail.com" },
]
description = "Web API for VTES cards and TWDA"
keywords = [
    "vtes",
    "Vampire: The Eternal Struggle",
    "CCG",
    "TWD",
    "TWDA",
    "api",
    "web",
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiohttp",
    "arrow",
    "babel",
    "fastapi",
    "krcg>=5",
    "msgspec",
    "python-multipart",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "coverage",
    "httpx",
    "ipython",
    "pytest",
    "ruff",
    "ty",
]

[project.scripts]
run-krcg-api = "krcg_api:main"

[project.urls]
Homepage = "https://api.krcg.org"
Repository = "https://github.com/lionel-panhaleux/krcg-api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ty.rules]
all = "error"
