[metadata]
name = krcg-api
version = 2.12.dev0
author = lionelpx
author_email = lionel.panhaleux@gmail.com
url = http://github.com/lionel-panhaleux/krcg
description="Web API for VTES cards and TWDA.",
long_description = file: README.md
long_description_content_type = text/markdown
license = "MIT"
keywords = vampire vtes ccg twd web api
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Environment :: Web Environment
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Framework :: Flask
    Topic :: Games/Entertainment
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    arrow
    babel
    flask
    krcg >= 2.18
    requests
    setuptools

[options.extras_require]
dev =
    black
    flake8
    ipython
    pytest
    zest.releaser[recommended]

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    run-krcg-api = krcg_api:main

[flake8]
max-line-length = 88
exclude = build, dist, .eggs
ignore = E203, W503

[bdist_wheel]
python-tag = py3

[distutils]
index-servers = pypi

[zest.releaser]
create-wheel = yes
